refactor to introduce status code into response type
