# swagger/swagger.json
@@ -38,7 +38,7 @@
                     {
                         "in": "body",
                         "name": "body",
-                        "description": "The struct content",
+                        "description": "The struct content, e.q {value: 1}",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/groot.StructRequest"
@@ -47,20 +47,19 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/groot.Struct"
-                        }
+                        "description": "{result} groot.Struct"
+                    },
+                    "400": {
+                        "description": "bad request"
+                    },
+                    "500": {
+                        "description": "internal server error"
                     }
                 }
             }
         }
     },
     "definitions": {
-        "groot.Struct": {
-            "title": "Struct",
-            "type": "object"
-        },
         "groot.StructRequest": {
             "title": "StructRequest",
             "type": "object"
